--- a/usage-scenarios.tex
+++ b/usage-scenarios.tex
@@ -276,7 +276,7 @@ The \emph{guava} library makes an interesting case for library fission since it 
 \end{itemize}
 \end{itemize}
 
-We looked at the ``Synk Vulnerability DB" for \emph{guava}. We found two vulnerabilties, ``Information Disclosure" which affects the ``com.google.common.io" package and ``Deserialization of Untrusted Data" which affects the ``com.google.common.collect" package. When we combed through projects that depend on \emph{guava} using Github's advanced search, we found multiple projects that depend on the invulnerable packages of \emph{guava} and would potentially benefit from fissioning \emph{guava}, in terms of security vulnerabilities.
+We looked at the ``Synk Vulnerability DB" for \emph{guava}. We found two vulnerabilties, ``Information Disclosure" which affects the ``com.google.common.io" package and ``Deserialization of Untrusted Data" which affects the ``com.google.common.collect" package. When we combed through projects that depend on \emph{guava} using Github's advanced search, we found multiple projects that depend on the invulnerable packages of \emph{guava} and would potentially benefit from fissioning \emph{guava}, in terms of security vulnerabilities. We observe that interactions with transitive dependencies play a bigger role in deciding whether a vulnerability affects a client, compared to when we actually create clusters for library fission.
 
 We believe that library fission is potentially beneficial to developers. However, we expect developer resistance when it comes to making these changes in their libraries, since they are breaking changes. Indeed, Tran et al~\cite{tran2000architectural} looked into improving file layouts of 2 open source systems (Linux and VIM); while this information is not in the cited work, we were told that, while the developers of these systems were appreciative of the changes they had made, they were still reluctant to accept them as they were breaking changes~\cite{godfrey22}. We believe that the appropriate window to introduce fission changes is when other major breaking changes are being planned. 
 
