last round from me

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -16,8 +16,8 @@ a wider range of domains.
 There is also the construct validity issue: tests may
 not adequately represent actual client behaviours. 
 Dietrich et al discuss this in their work~\cite{dietrich2017construction}; 
-they find that coverage by unit tests is low, 
-but is made up for by the fact that programmers are likely to write tests for the parts of the code
+they find that even when coverage by unit tests is low,
+the low coverage is made up for by the fact that programmers are likely to write tests for the parts of the code
 that they believe to be most important. 
 The other issue is considering client test suites as a reasonable representation of how libraries are used by the client.
 Our use of both static and dynamic information addresses both this issue and that of low coverage. 
