--- a/uw-ethesis.bib
+++ b/uw-ethesis.bib
@@ -2,7 +2,7 @@
 % For use with BibTeX
 
 @article{amann2018systematic,
-  title={A systematic evaluation of static api-misuse detectors},
+  title={A systematic evaluation of static {API}-misuse detectors},
   author={Amann, Sven and Nguyen, Hoan Anh and Nadi, Sarah and Nguyen, Tien N and Mezini, Mira},
   journal={IEEE Transactions on Software Engineering},
   volume={45},
@@ -100,7 +100,7 @@ location = {Helsinki, Finland},
 @INPROCEEDINGS{landman17:_chall_static_analy_java_reflec,
   author={Landman, Davy and Serebrenik, Alexander and Vinju, Jurgen J.},
   booktitle={2017 IEEE/ACM 39th International Conference on Software Engineering (ICSE)}, 
-  title={Challenges for Static Analysis of {Java} Reflection---Literature Review and Empirical Study}, 
+  title={Challenges for Static Analysis of {Java} Reflection---{Literature} Review and Empirical Study}, 
   year=2017,
   pages={507-518},
   doi={10.1109/ICSE.2017.53}}
@@ -145,7 +145,7 @@ location = {Helsinki, Finland},
 }
 
 @inproceedings{benelallam2019maven,
-	title={The {Maven} dependency graph: a temporal graph-based representation of {Maven} {Central}},
+	title={The {Maven} dependency graph: {A} temporal graph-based representation of {Maven} {Central}},
 	author={Benelallam, Amine and Harrand, Nicolas and Soto-Valero, C{\'e}sar and Baudry, Benoit and Barais, Olivier},
 	booktitle={MSR},
 	pages={344--348},
@@ -165,7 +165,7 @@ location = {Helsinki, Finland},
 
 @article{dietrich2017xcorpus,
 	title={XCorpus--an executable corpus of {Java} programs},
-	author={Dietrich, JB and Schole, Henrik and Sui, Li and Tempero, Ewan},
+	author={Dietrich, Jens and Schole, Henrik and Sui, Li and Tempero, Ewan},
 	year={2017},
 	journal={jot.fm},
 	publisher={AITO}
@@ -191,7 +191,7 @@ location = {Helsinki, Finland},
 
 @inproceedings{chinthanet20:_code_based_vulner_detec_node,
 author = {Chinthanet, Bodin and Ponta, Serena Elisa and Plate, Henrik and Sabetta, Antonino and Kula, Raula Gaikovina and Ishio, Takashi and Matsumoto, Kenichi},
-title = {Code-Based Vulnerability Detection in {Node.Js} Applications: How Far Are We?},
+title = {Code-Based Vulnerability Detection in {Node.js} Applications: How Far Are We?},
 year = 2020,
 isbn = 9781450367684,
 publisher = {Association for Computing Machinery},
@@ -225,7 +225,7 @@ series = {ASE '20}
 @INPROCEEDINGS{kerzazi14:_why_do_autom_build_break,
   author={Kerzazi, Noureddine and Khomh, Foutse and Adams, Bram},
   booktitle={2014 IEEE International Conference on Software Maintenance and Evolution}, 
-  title={Why Do Automated Builds Break? An Empirical Study}, 
+  title={Why Do Automated Builds Break? {An} Empirical Study}, 
   year=2014,
   pages={41-50},
   doi={10.1109/ICSME.2014.26}}
@@ -297,11 +297,11 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3236024.3275535},
 doi = {10.1145/3236024.3275535},
-abstract = {Software engineering practices have evolved to the point where a developer writing a new application today doesn’t start from scratch, but reuses a number of open source libraries and components. These third-party libraries evolve independently of the applications in which they are used, and may not maintain stable interfaces as bugs and vulnerabilities in them are fixed. This in turn causes API incompatibilities in downstream applications which must be manually resolved. Oversight here may manifest in many ways, from test failures to crashes at runtime. To address this problem, we present a static analysis for automatically and efficiently checking if a library upgrade introduces an API incompatibility. Our analysis does not rely on reported version information from library developers, and instead computes the actual differences between methods in libraries across different versions. The analysis is scalable, enabling real-time diff queries involving arbitrary pairs of library versions. It supports a vulnerability remediation product which suggests library upgrades automatically and is lightweight enough to be part of a continuous integration/delivery (CI/CD) pipeline. To evaluate the effectiveness of our approach, we determine semantic versioning adherence of a corpus of open source libraries taken from {Maven} Central, PyPI, and RubyGems. We find that on average, 26% of library versions are in violation of semantic versioning. We also analyze a collection of popular open source projects from GitHub to determine if we can automatically update libraries in them without causing API incompatibilities. Our results indicate that we can suggest upgrades automatically for 10% of the libraries.},
+abstract = {Software engineering practices have evolved to the point where a developer writing a new application today doesn’t start from scratch, but reuses a number of open source libraries and components. These third-party libraries evolve independently of the applications in which they are used, and may not maintain stable interfaces as bugs and vulnerabilities in them are fixed. This in turn causes {API} incompatibilities in downstream applications which must be manually resolved. Oversight here may manifest in many ways, from test failures to crashes at runtime. To address this problem, we present a static analysis for automatically and efficiently checking if a library upgrade introduces an {API} incompatibility. Our analysis does not rely on reported version information from library developers, and instead computes the actual differences between methods in libraries across different versions. The analysis is scalable, enabling real-time diff queries involving arbitrary pairs of library versions. It supports a vulnerability remediation product which suggests library upgrades automatically and is lightweight enough to be part of a continuous integration/delivery (CI/CD) pipeline. To evaluate the effectiveness of our approach, we determine semantic versioning adherence of a corpus of open source libraries taken from {Maven} Central, PyPI, and RubyGems. We find that on average, 26% of library versions are in violation of semantic versioning. We also analyze a collection of popular open source projects from GitHub to determine if we can automatically update libraries in them without causing {API} incompatibilities. Our results indicate that we can suggest upgrades automatically for 10% of the libraries.},
 booktitle = {FSE},
 pages = {791–796},
 numpages = 6,
-keywords = {api diffs, automated remediation, call graphs, library upgrades, semantic versioning},
+keywords = {{API} diffs, automated remediation, call graphs, library upgrades, semantic versioning},
 location = {Lake Buena Vista, FL, USA},
 }
 
@@ -381,7 +381,7 @@ year      = {2021},
 
 @Article{kuhn10:_softw,
   author =       {Adrian Kuhn and David Erni and Peter Loretan and Oscar Nierstrasz},
-  title =        {Software cartography: thematic software visualization with consistent layout},
+  title =        {Software cartography: {Thematic} software visualization with consistent layout},
   journal =      {Journal of Software Maintenance and Evolution},
   year =         2010,
   volume =    22,
@@ -586,7 +586,7 @@ series = {MSR '18}
 
 
 @inproceedings{abdalkareem2017developers,
-	title={Why do developers use trivial packages? an empirical case study on npm},
+	title={Why do developers use trivial packages? {An} empirical case study on npm},
 	author={Abdalkareem, Rabe and Nourry, Olivier and Wehaibi, Sultan and Mujahid, Suhaib and Shihab, Emad},
 	booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
 	pages={385--395},
@@ -605,7 +605,7 @@ series = {MSR '18}
   month =     {April}}
 
 @article{luszcz2018apache,
-	title={Apache {Struts} 2: how technical and development gaps caused the {Equifax} Breach},
+	title={Apache {Struts} 2: {How} technical and development gaps caused the {Equifax} Breach},
 	author={Luszcz, Jeff},
 	journal={Network Security},
 	volume={2018},
