--- a/api-study.tex
+++ b/api-study.tex
@@ -57,7 +57,7 @@ we can see that the actual API surface includes classes
 
 Before we look at API usage patterns, we first present our classification framework for classifying API uses and also to understand whether an API use is a misuse. We intend for this framework to serve as a guideline for component developers who want to understand their software's interactions with other components. 
 
-The framework aims to enumerate different ways that a library exposes APIs to clients and to classify their usage. It enables library developers to think about whether the actual APIs being exported and used by clients are intended uses. As an example, a library developer knows that certain public methods are exported as an interface. However, they may not mean to export a specific type as part of the interface, but observe it being used by a client. They can reflect on whether such client uses of their APIs are expected or unexpected based on their original design; this could prove useful when they design new APIs. Client developers can possibly use this framework to compare and contrast the design of different libraries with similar functionality.
+The framework aims to enumerate different ways that a library exposes APIs to clients and to classify their usage. It enables library developers to think about whether the actual APIs being exported and used by clients are intended uses. As an example, a library developer knows that certain public methods are exported as an interface. However, they may not intend to export a specific type as part of the interface, but observe it being used by a client. They can reflect on whether such client uses of their APIs are expected or unexpected based on their original design; this could prove useful when they design new APIs. We hope that this framework can be useful to client developers for comparing and contrasting the design of different libraries with similar functionality.
 
 This conceptual framework outlines four dimensions along which a potential API use can be classified. We phrase the four dimensions as questions; each API usage has an answer for each of the questions. They are as follows: \emph{what}, \emph{how} \emph{which way} and \emph{why not}?
 
