--- a/conclusion.tex
+++ b/conclusion.tex
@@ -75,7 +75,8 @@ Other observations from our study include reflection and \texttt{setAccessible()
 reflection and \texttt{setAccessible()} being used on things that are already accessible (for example, public methods), 
 accesses to non-constant fields of a library by a client and so on. Understanding the reason for these usage patterns can aid in better API design in the future.
 
-Further user evaluations of our VizAPI tool can establish and improve the
+VizAPI is in development and future work includes features such as zooming and filtering. 
+User evaluations of our VizAPI tool can establish and improve the
 effectiveness of VizAPI. This can be performed following
 existing techniques~\cite{merino18:_system_liter_review_softw_visual_evaluat}; in
 particular, experiments where users perform software
