--- a/usage-scenarios.tex
+++ b/usage-scenarios.tex
@@ -18,9 +18,10 @@ A limitation of this tool is that with larger, complex systems, the visualizatio
 Another limitation is that the tool is highly dependent on the size of the project in terms of time and can take hours to produce graphs.
 However, we do not intend for this tool to be used regularly as part of a software development cycle. 
 It is only intended to be used when developers want to examine their use of libraries or usage by clients.
+VizAPI is still in a preliminary phase and in development.
 
 VizAPI incorporates information from static and dynamic analyses. 
-We have made VizAPI publicly available\footnote{\url{https://github.com/SruthiVenkat/api-visualization-tool}}, although it is still in development. We have also archived the artifact at \href{https://doi.org/10.5281/zenodo.7023911}{https://doi.org/10.5281/zenodo.7023911}
+We have made VizAPI publicly available\footnote{\url{https://github.com/SruthiVenkat/api-visualization-tool}}. We have also archived the artifact at \href{https://doi.org/10.5281/zenodo.7023911}{https://doi.org/10.5281/zenodo.7023911}
 
 \begin{figure}[h]
 \begin{center}
